# opendata

./: .gitignore  AGENTS.md  Cargo.toml  MANIFESTO_SIGNERS.md  README.md
bencher/src/: lib.rs  reporter.rs
common/: AGENTS.md  Cargo.toml
common/src/coordinator/: error.rs  handle.rs  mod.rs
common/src/storage/: mod.rs  slate.rs
log/: AGENTS.md  Cargo.toml  README.md
log/bench/src/: ingest.rs
log/rfcs/: 0001-storage.md  0002-logical-segmentation.md  0003-listing-apis.md
log/src/: config.rs  lib.rs  listing.rs  log.rs  main.rs  model.rs  range.rs  reader.rs  segment.rs  serde.rs  storage.rs
log/src/server/: handlers.rs  http.rs  metrics.rs  proto.rs  request.rs  response.rs
log/tests/: http_api_formats.rs  http_server.rs
open-tsdb/: Cargo.toml  README.md
open-tsdb/src/: delta.rs  main.rs  otel.rs  storage.rs  util.rs
open-tsdb/src/promql/: config.rs  mod.rs  parser.rs  request.rs  response.rs  router.rs  server.rs
open-tsdb/src/serde/: bucket_list.rs  common.rs  dictionary.rs  forward_index.rs  inverted_index.rs  key.rs  mod.rs  timeseries.rs
opendata-common/: Cargo.toml
opendata-common/src/: clock.rs  lib.rs
opendata-common/src/storage/: config.rs  factory.rs  in_memory.rs  mod.rs  slate.rs
rfcs/: 0000-template.md  0004-common-encodings.md  0004-write-coordination.md
timeseries/: AGENTS.md  Cargo.toml
timeseries/proptest-regressions/promql/: functions.txt
timeseries/rfcs/: 0002-write-api.md
timeseries/src/: config.rs  lib.rs  main.rs  timeseries.rs
timeseries/src/promql/: evaluator.rs  functions.rs  metrics.rs  mod.rs  server.rs  tsdb_router.rs
timeseries/src/promql/promqltest/: README.md  assert.rs  dsl.rs  evaluator.rs  loader.rs  mod.rs  runner.rs
timeseries/src/promql/promqltest/testdata/: at_modifier.test  selectors.test
vector/: AGENTS.md
vector/rfcs/: 0001-storage.md
vector/src/: db.rs
vector/src/serde/: deletions.rs  key.rs  metadata_index.rs  mod.rs  posting_list.rs  vector_bitmap.rs
vector/src/storage/: merge_operator.rs  mod.rs
