[workspace]
resolver = "2"
members = [
    "opendata-common",
    "open-tsdb",
    "open-log",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
dashmap = "6.1.0"
opendata-common = { path = "./opendata-common" }
rstest = "0.19"
slatedb = "0.9.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = "1.14.0"