[workspace]
resolver = "2"
members = [
    "bencher",
    "common",
    "keyvalue",
    "log",
    "log/bench",
    "timeseries",
    "timeseries/bench",
    "vector",
    "vector/bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.12", features = ["query", "form"] }
base64 = "0.22"
bytes = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
dashmap = "6.1.0"
fail = "0.5"
futures = { version = "0.3", features = ["std"] }
moka = { version = "0.12", features = ["future"] }
bencher = { path = "./bencher" }
common = { path = "./common", package = "opendata-common", version = "0.1.5" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roaring = "0.10"
rstest = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["base64"] }
serde_yaml = "0.9"
slatedb = "0.10.1"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.14.0"
prost = "0.13"
proptest = "1"
rug = "1.28"
snap = "1"
criterion = "0.5"
