[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
slatedb.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_yaml.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "varint"
harness = false
