[package]
name = "opendata-log"
version = "0.2.0"
edition.workspace = true
description = "Key-oriented log database built on SlateDB"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "log", "streaming", "slatedb"]
categories = ["database"]

[lib]
name = "log"
path = "src/lib.rs"

[[bin]]
name = "opendata-log"
path = "src/main.rs"
required-features = ["http-server"]

[features]
default = []
http-server = ["dep:axum", "dep:tower", "dep:clap", "dep:prometheus-client"]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
common.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
slatedb.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP server dependencies (optional, enabled by http-server feature)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
prometheus-client = { version = "0.22", optional = true }

[dev-dependencies]
base64.workspace = true
proptest.workspace = true
reqwest.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
