[package]
name = "open-tsdb"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
opendata-common.workspace = true
slatedb.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

blake3 = "1.8.2"
opentelemetry-proto = "0.30"
promql-parser = "0.6"
roaring = "0.7"
tsz = "0.1"

[dev-dependencies]
rstest.workspace = true
