[package]
name = "opendata-common"
version.workspace = true
edition.workspace = true

[dependencies]
slatedb.workspace = true
bytes.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_yaml.workspace = true
