[package]
name = "opendata-timeseries"
version = "0.1.4"
edition.workspace = true
description = "Prometheus-compatible time series database built on SlateDB"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "timeseries", "prometheus", "metrics"]
categories = ["database"]

[lib]
name = "timeseries"
path = "src/lib.rs"

[[bin]]
name = "opendata-timeseries"
path = "src/main.rs"

[features]
default = []
testing = []
remote-write = ["dep:prost", "dep:snap"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
dashmap.workspace = true
moka.workspace = true
common = { workspace = true, features = ["metrics"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
slatedb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

blake3 = "1.8.2"
mime_guess = "2"
prometheus-client = "0.22"
promql-parser = "0.6"
regex = "1.0"
regex-syntax = "0.8"
roaring = "0.7"
rust-embed = { version = "8", features = ["mime-guess"] }
tsz = "0.1"

# Optional dependencies for remote-write feature
prost = { workspace = true, optional = true }
snap = { workspace = true, optional = true }

[dev-dependencies]
fail.workspace = true
proptest.workspace = true
rstest.workspace = true
rug.workspace = true

[[test]]
name = "http_server"
required-features = ["testing"]
